[package]
name = "umls-core"
version = "0.1.0"
edition = "2021"

[features]
stack = []

[dependencies]
derive-serialize = { path = "../umls-macros" }

aead = { version = "0.5.2", default-features = false }
heapless = { version = "0.8.0", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
itertools = { version = "0.14.0", default-features = false }

[dev-dependencies]
hex-literal = "0.4.1"
