[package]
name = "umls-rust-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
umls-core = { path = "../umls-core" }
heapless = "0.8.0"

# Random
rand = { version = "0.9.0", default-features = false }
old_rand_core = { package = "rand_core", version = "0.6.4" }

# AEAD
aes-gcm = { version = "0.10" }
chacha20poly1305 = { version = "0.10", default-features = false }
aead = { version = "0.5", default-features = false }

# Hash
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }

# KEM
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

# Signature
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "ecdh"] }

