[package]
name = "umls"
version = "0.1.0"
edition = "2021"

[features]
std_rng = ["rand/std", "rand/std_rng"]
stack = ["umls-core/stack"]
null-crypto = ["umls-core/null-crypto"]
default = []

[dependencies]
umls-core = { path = "../umls-core" }

rand = { version = "0.8.5", default-features = false, features = ["std_rng"]}
rand_core = { version = "0.6", default-features = false }

heapless = "0.8.0"

[dev-dependencies]
rand_chacha = "0.3.1"
tabled = "0.17.0"
umls-rust-crypto = { path = "../umls-rust-crypto" }
