[package]
name = "umls"
version = "0.1.0"
edition = "2021"

[features]
thread_rng = ["rand/thread_rng"]
stack = ["umls-core/stack"]
null-crypto = ["umls-core/null-crypto"]
default = []

[dependencies]
umls-core = { path = "../umls-core" }

rand = { version = "0.9.0", default-features = false}
heapless = "0.8.0"

[dev-dependencies]
rand_chacha = "0.9.0"
tabled = "0.17.0"
umls-rust-crypto = { path = "../umls-rust-crypto" }
